Import of GNG/File-Log-1.02 from CPAN.
gitpan-cpan-distribution: File-Log
gitpan-cpan-version:      1.02
gitpan-cpan-path:         GNG/File-Log-1.02.tar.gz
gitpan-cpan-author:       GNG
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+Log.pm
+Revision 1.2  2004/10/08 23:10:14  Greg
+- Changed new() to allow named argument as well as the anonymous hash reference.
+
 V1.1
 -Initial CPAN release
 
