--- a/Changes
+++ b/Changes
@@ -1,4 +1,13 @@
-Log.pm
+File::Log.pm
+
+ Revision 1.4  2008/02/26 08:54:31  Greg
+ - Updated POD
+
+ Revision 1.3  2007/07/17 11:23:49  Greg
+ - Added say() method
+ - Added say, msgprepend and dateFormat arguments to new()
+ - Added pre close of STDERR
+
 Revision 1.2  2004/10/08 23:10:14  Greg
 - Changed new() to allow named argument as well as the anonymous hash reference.
 
