--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-File/Log version 1.2
+File/Log version 1.3
 ====================
 
-This is version 1.2 of File::Log, a module to allow simple logging
+This is version 1.3 of File::Log, a module to allow simple logging
 of data to a file.  It provides for control over the amount of data
 written by defining a debug value (where higher values represent more
 log detail.  There is also an exception method which is used to log
@@ -31,6 +31,9 @@ This module requires the two standard modules:
   Carp,
   Symbol
 
+and
+
+  POSIX if 'dateformat' flag to new is used
 
 COPYRIGHT AND LICENCE
 
