Import of GNG/File-Log-1.05 from CPAN.
gitpan-cpan-distribution: File-Log
gitpan-cpan-version:      1.05
gitpan-cpan-path:         GNG/File-Log-1.05.tar.gz
gitpan-cpan-author:       GNG
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 File::Log.pm
 
+ Revision 1.5  2008/03/01  Greg
+ - Updated Makefile.PL to enclude Encode.pm as pre req
+
  Revision 1.4  2008/02/26 08:54:31  Greg
  - Updated POD
 
